# ncbi-cxx-toolkit-public

./: .cvsignore  .gitlab-ci.yml  LICENSE  LICENSE.md  Makefile.in  README  README.md  acconfig.h  aclocal.m4  cmake-configure  cmake-configure.bat  config.h.in  config.site.ex  configure  configure.ac  configure.in  configure.sh
src/: CMakeLists.txt  Makefile.app.in  Makefile.app.tmpl.in  Makefile.both.in  Makefile.configurables  Makefile.configurables.null  Makefile.configurables.real  Makefile.dll.in  Makefile.in  Makefile.in.skel  Makefile.lib.in  Makefile.lib.tmpl.in  Makefile.meta.in  Makefile.mk.in  Makefile.mk.in.msvc  Makefile.module  Makefile.null.in  Makefile.rules.in  Makefile.rules_with_autodep.in  check.cfg.in  if_diff.sh.in  install.sh.in  new_module.sh.in  reconfigure.sh.in  relocate.sh.in  run_sybase_app.sh.in
src/algo/: CMakeLists.txt  Makefile.in
src/app/: CMakeLists.txt  Makefile.in
src/bdb/: Makefile.bdb.lib  Makefile.in  Makefile.ncbi_xcache_bdb.lib  bcache.bds  bdb_blob.cpp  bdb_blobcache.cpp  bdb_checkpoint_thread.cpp  bdb_cursor.cpp  bdb_dict_store.cpp  bdb_env.cpp  bdb_expt.cpp  bdb_ext_blob.cpp  bdb_file.cpp  bdb_filedump.cpp  bdb_query.cpp  bdb_query_bison.tab.c  bdb_query_bison.y  bdb_query_lexer.inc  bdb_query_parser_main.cpp  bdb_result_store.cpp  bdb_trans.cpp  bdb_types.cpp  bdb_util.cpp  bdb_volumes.cpp  readme_cache.txt
src/build-system/: CMakeLists.txt  Makefile.app.in  Makefile.both.in  Makefile.compress_tests  Makefile.configurables  Makefile.configurables.real  Makefile.dll.in  Makefile.flat_shims  Makefile.flat_tuneups  Makefile.in  Makefile.in.skel  Makefile.in.top  Makefile.is_dll_support.in  Makefile.is_gmake  Makefile.lib.in  Makefile.lib.tmpl.in  Makefile.meta.gmake=no  Makefile.meta.gmake=yes  Makefile.meta.in  Makefile.meta_f  Makefile.meta_l  Makefile.meta_p  Makefile.meta_r  Makefile.metal.in  Makefile.metal.tmpl.in  Makefile.mk.in  Makefile.mk.in.msvc  Makefile.mk.in.xcode  Makefile.module  Makefile.protobuf.in  Makefile.requirements  Makefile.rules.in  Makefile.rules_with_autodep.in  Makefile.top_builddir.in  Makefile.xcode.tmpl  Makefile.xcode.top.tmpl  NEWS  aclocal.m4  check.cfg.in  config.cmake.h.in  (+17 more)
src/cgi/: CMakeLists.cgi.lib.txt  CMakeLists.fcgi.lib.txt  CMakeLists.fcgi_mt.lib.txt  CMakeLists.fcgi_st.lib.txt  CMakeLists.txt  Makefile.cgi.lib  Makefile.fcgi.lib  Makefile.fcgi_mt.lib  Makefile.in  cgi2grid.cpp  cgi_entry_reader.cpp  cgi_exception.cpp  cgi_impl.hpp  cgi_run.cpp  cgi_serial.cpp  cgi_session.cpp  cgi_util.cpp  cgiapp.cpp  cgiapp_cached.cpp  cgictx.cpp  dbres.cpp  fcgi_run.cpp  fcgiapp_mt.cpp  fcgiapp_st.cpp  fcgibuf.cpp  fcgibuf.hpp  ncbicgi.cpp  ncbicgir.cpp  ncbires.cpp  ref_args.cpp  user_agent.cpp
src/check/: CMakeLists.txt  Makefile.check  Makefile.in  check.sh  ignore.lst  ncbi_test_data
src/connect/: CMakeLists.connect.lib.txt  CMakeLists.connssl.lib.txt  CMakeLists.txt  CMakeLists.xconnect.lib.txt  CMakeLists.xconnsftp.lib.txt  CMakeLists.xthrserv.lib.txt  CMakeLists.xxconnect.lib.txt  CMakeLists.xxconnect2.lib.txt  Makefile.connect.lib  Makefile.connect.lib.msvc  Makefile.connect.lib.unix  Makefile.connect.lib.xcode  Makefile.connssl.lib  Makefile.connssl.lib.unix  Makefile.in  Makefile.xconnect.lib  Makefile.xconnect.lib.msvc  Makefile.xconnect.lib.unix  Makefile.xconnect.lib.xcode  Makefile.xconnserv.lib  Makefile.xconnserv.lib.msvc  Makefile.xconnsftp.lib  Makefile.xconnsftp.mk  Makefile.xthrserv.lib  Makefile.xthrserv.lib.msvc  Makefile.xxconnect.lib  Makefile.xxconnect.lib.msvc  Makefile.xxconnect.lib.unix  Makefile.xxconnect2.lib  Makefile.xxconnect2.mk  _pch.cpp  cgi_email_diag_handler.cpp  connect_misc.cpp  connect_misc_impl.hpp  connection_pool.cpp  connection_pool.hpp  email_diag_handler.cpp  ncbi_ansi_ext.c  ncbi_ansi_ext.h  ncbi_assert.h  (+107 more)
src/corelib/: CMakeLists.corelib.lib.txt  CMakeLists.test_boost.lib.txt  CMakeLists.test_mt.lib.txt  CMakeLists.txt  Makefile.corelib.lib  Makefile.corelib.lib.msvc  Makefile.in  Makefile.ncbi_java.dll.msvc  Makefile.ncbi_java.lib  Makefile.precompile.in  Makefile.test_boost.lib  Makefile.test_mt.lib  Makefile.test_mt.lib.msvc  blob_storage.cpp  crc32_sse.cpp  ddump_context.cpp  ddump_formatter_text.cpp  ddumpable.cpp  debug_dump_context.cpp  dumpable.cpp  env_reg.cpp  error_codes_p.hpp  expr.cpp  guard.cpp  interprocess_lock.cpp  ipc_lock.cpp  metareg.cpp  ncbi_application.xsd  ncbi_autoinit.cpp  ncbi_base64.c  ncbi_base64.h  ncbi_cache.cpp  ncbi_config.cpp  ncbi_cookies.cpp  ncbi_dbsvcmapper.cpp  ncbi_fast.cpp  ncbi_java.cpp  ncbi_message.cpp  ncbi_os_mac.cpp  ncbi_os_mswin.cpp  (+68 more)
src/ctools/: CMakeLists.ctools.lib.txt  CMakeLists.txt  Makefile.ctools.lib  Makefile.in  asn_connection.c  ctools.cpp  error_codes.h
src/db/: CMakeLists.txt  Makefile.in
src/dbapi/: CMakeLists.dbapi.lib.txt  CMakeLists.txt  Makefile.dbapi.lib  Makefile.in  active_obj.cpp  active_obj.hpp  array.cpp  array.hpp  basetmpl.hpp  blobstream.cpp  blobstream.hpp  bulkinsert.cpp  bulkinsert.hpp  bytestreambuf.cpp  bytestreambuf.hpp  conn_impl.cpp  conn_impl.hpp  cstmt_impl.cpp  cstmt_impl.hpp  cursor_impl.cpp  cursor_impl.hpp  dbapi.cpp  dbexception.hpp  driver_mgr.cpp  ds_impl.cpp  ds_impl.hpp  err_handler.cpp  err_handler.hpp  invalidobjex.hpp  rs_impl.cpp  rs_impl.hpp  rsmeta_impl.cpp  rsmeta_impl.hpp  rw_impl.cpp  rw_impl.hpp  stmt_impl.cpp  stmt_impl.hpp  variant.cpp
src/dll/: CMakeLists.txt  Makefile.in
src/html/: .toolrc  CMakeLists.html.lib.txt  CMakeLists.txt  Makefile.html.in  Makefile.html.lib  Makefile.in  commentdiag.cpp  components.cpp  frontpage.cpp  frontpage.html  html.cpp  html_exception.cpp  htmlhelper.cpp  indentstream.cpp  jsmenu.cpp  linkbar.cpp  make.tool  makefile  ncbi.css  ncbi_menu_dnd.js  ncbi_menu_dyn.js  node.cpp  nodemap.cpp  page.cpp  pager.cpp  querypages.cpp  selection.cpp  test.cpp  tool.cpp  tool.html  toolpages.cpp  writer_htmlenc.cpp
src/misc/: CMakeLists.txt  Makefile.in  Makefile.third_party_dll_install.msvcproj
src/objects/: CMakeLists.txt  Makefile  Makefile.in  Makefile.sources  nt_sources.sh
src/objmgr/: CMakeLists.txt  (+109 more)
(+21383 files in other folders)
